3.1.0/_sources/plugins/partition_table_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-entry
.. role:: ansible-option-default
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.redhat.satellite.partition_table_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

redhat.satellite.partition_table -- Manage Partition Table Templates
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `redhat.satellite collection <https://galaxy.ansible.com/redhat/satellite>`_ (version 3.1.0).

    You might already have this collection installed if you are using the ``ansible`` package.
    It is not included in ``ansible-core``.
    To check whether it is installed, run :code:`ansible-galaxy collection list`.

    To install it, use: :code:`ansible-galaxy collection install redhat.satellite`.

    To use it in a playbook, specify: :code:`redhat.satellite.partition_table`.

.. version_added

.. versionadded:: 1.0.0 of redhat.satellite

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage Partition Table Templates


.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- requests


.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-file_name"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__parameter-file_name:

      .. rst-class:: ansible-option-title

      **file_name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-file_name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`path`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The path of a template file, that shall be imported.

      Either this or \ :emphasis:`layout`\  is required as a source for the Partition Template "content".


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-layout"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__parameter-layout:

      .. rst-class:: ansible-option-title

      **layout**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-layout" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The content of the Partitioning Table Template

      Either this or \ :emphasis:`file\_name`\  is required as a source for the Partition Template "content".


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-locations"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__parameter-locations:

      .. rst-class:: ansible-option-title

      **locations**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-locations" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      List of locations the entity should be assigned to


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-locked"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__parameter-locked:

      .. rst-class:: ansible-option-title

      **locked**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-locked" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Determines whether the template shall be locked


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-name"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__parameter-name:

      .. rst-class:: ansible-option-title

      **name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The name of the Partition Table.

      If omited, will be determined from the \ :literal:`name`\  header of the template or the filename (in that order).

      The special value "*" can be used to perform bulk actions (modify, delete) on all existing Partition Tables.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-organizations"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__parameter-organizations:

      .. rst-class:: ansible-option-title

      **organizations**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-organizations" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      List of organizations the entity should be assigned to


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-os_family"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__parameter-os_family:

      .. rst-class:: ansible-option-title

      **os_family**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-os_family" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The OS family the template shall be assigned with.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`AIX`
      - :ansible-option-choices-entry:`Altlinux`
      - :ansible-option-choices-entry:`Archlinux`
      - :ansible-option-choices-entry:`Coreos`
      - :ansible-option-choices-entry:`Debian`
      - :ansible-option-choices-entry:`Freebsd`
      - :ansible-option-choices-entry:`Gentoo`
      - :ansible-option-choices-entry:`Junos`
      - :ansible-option-choices-entry:`NXOS`
      - :ansible-option-choices-entry:`Rancheros`
      - :ansible-option-choices-entry:`Redhat`
      - :ansible-option-choices-entry:`Solaris`
      - :ansible-option-choices-entry:`Suse`
      - :ansible-option-choices-entry:`Windows`
      - :ansible-option-choices-entry:`Xenserver`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-password"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__parameter-password:

      .. rst-class:: ansible-option-title

      **password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Password of the user accessing the Foreman server.

      If the value is not specified in the task, the value of environment variable \ :literal:`SATELLITE\_PASSWORD`\  will be used instead.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-server_url"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__parameter-server_url:

      .. rst-class:: ansible-option-title

      **server_url**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-server_url" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      URL of the Foreman server.

      If the value is not specified in the task, the value of environment variable \ :literal:`SATELLITE\_SERVER\_URL`\  will be used instead.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-state"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__parameter-state:

      .. rst-class:: ansible-option-title

      **state**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-state" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      State of the entity

      \ :literal:`present\_with\_defaults`\  will ensure the entity exists, but won't update existing ones


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-default-bold:`present` :ansible-option-default:`← (default)`
      - :ansible-option-choices-entry:`present\_with\_defaults`
      - :ansible-option-choices-entry:`absent`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-updated_name"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__parameter-updated_name:

      .. rst-class:: ansible-option-title

      **updated_name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-updated_name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      New name of the template. When this parameter is set, the module will not be idempotent.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-username"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__parameter-username:

      .. rst-class:: ansible-option-title

      **username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Username accessing the Foreman server.

      If the value is not specified in the task, the value of environment variable \ :literal:`SATELLITE\_USERNAME`\  will be used instead.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_certs"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__parameter-validate_certs:

      .. rst-class:: ansible-option-title

      **validate_certs**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_certs" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Whether or not to verify the TLS certificates of the Foreman server.

      If the value is not specified in the task, the value of environment variable \ :literal:`SATELLITE\_VALIDATE\_CERTS`\  will be used instead.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>


.. Attributes


.. Notes


.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    

    # Keep in mind, that in this case, the inline parameters will be overwritten
    - name: "Create a Partition Table inline"
      redhat.satellite.partition_table:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        name: A New Partition Template
        state: present
        layout: |
          <%#
            name: A Partition Template
          %>
            zerombr
            clearpart --all --initlabel
            autopart
        locations:
          - Gallifrey
        organizations:
          - TARDIS INC

    - name: "Create a Partition Template from a file"
      redhat.satellite.partition_table:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        file_name: timeywimey_template.erb
        state: present
        locations:
          - Gallifrey
        organizations:
          - TARDIS INC

    - name: "Delete a Partition Template"
      redhat.satellite.partition_table:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        name: timeywimey
        layout: |
          <%#
              dummy:
          %>
        state: absent

    - name: "Create a Partition Template from a file and modify with parameter(s)"
      redhat.satellite.partition_table:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        file_name: timeywimey_template.erb
        name: Wibbly Wobbly Template
        state: present
        locations:
          - Gallifrey
        organizations:
          - TARDIS INC

    # Providing a name in this case wouldn't be very sensible.
    # Alternatively make use of with_filetree to parse recursively with filter.
    - name: "Parsing a directory of partition templates"
      redhat.satellite.partition_table:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        file_name: "{{ item }}"
        state: present
        locations:
          - SKARO
        organizations:
          - DALEK INC
        with_fileglob:
           - "./arsenal_templates/*.erb"

    # If the templates are stored locally and the ansible module is executed on a remote host
    - name: Ensure latest version of all Ptable Community Templates
      redhat.satellite.partition_table:
        server_url: "https://satellite.example.com"
        username: "admin"
        password: "changeme"
        state: present
        layout: '{{ lookup("file", item.src) }}'
      with_filetree: '/path/to/partition/tables'
      when: item.state == 'file'


    # with name set to "*" bulk actions can be performed
    - name: "Delete *ALL* partition tables"
      redhat.satellite.partition_table:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        name: "*"
        state: absent

    - name: "Assign all partition tables to the same organization(s)"
      redhat.satellite.partition_table:
        username: "admin"
        password: "changeme"
        server_url: "https://satellite.example.com"
        name: "*"
        state: present
        organizations:
          - DALEK INC
          - sky.net
          - Doc Brown's garage





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-entity"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__return-entity:

      .. rst-class:: ansible-option-title

      **entity**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-entity" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Final state of the affected entities grouped by their type.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success


      .. raw:: html

        </div>

    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-entity/ptables"></div>

      .. _ansible_collections.redhat.satellite.partition_table_module__return-entity/ptables:

      .. rst-class:: ansible-option-title

      **ptables**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-entity/ptables" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      List of partition tables.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success


      .. raw:: html

        </div>




..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Bernhard Hopfenmueller (@Fobhep) ATIX AG
- Matthias Dellweg (@mdellweg) ATIX AG



.. Parsing errors

